# advay-learning

./: .env.example  .gitignore  .gitleaksignore  .gitmessage  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  AUDIT_PLAN_GAMES_UX.md  BATCH6_REVIEW_DOC.md  CHANGELOG.md  DOCS_FOLDER_SUMMARY.md  ERROR_HANDLING_REVIEW.md  README.md  RESEARCH_COMPLETION_SUMMARY_2026-03-05.md  Toddler_Game_QA_Report_EmojiMatch.docx  Toddler_Game_QA_Report_UPDATED.docx  UX-001-standardize-game-routing.md  UX-Flow-Analysis-Learning-App-Children.md  WEB_FRAMEWORKS_COMPENDIUM.md  docker-compose.override.yml  docker-compose.yml  emoji_final_frame_analysis.txt  emoji_frame_analysis_results.json  package-lock.json  package.json  playwright.config.ts  pyproject.toml  screenshot-tests.js  vitest.config.ts
.agent/: AGENT_KICKOFF_PROMPT.txt  SESSION_CONTEXT.md  STEP1_ENV.sh
.githooks/: commit-msg  pre-commit  pre-push
.github/: pull_request_template.md
docs/: 3d_ecosystem_research_report.md  ACTIVITY_INVENTORY_GAMES_UX.md  AGENT_GATE_AUDIT_TICKET_REFERENCE_FIX.md  AGENT_HANDOFF_CAMERA_INDICATOR.md  AGENT_HANDOFF_COMPLETE.md  AGENT_HANDOFF_SETTINGS_PARENT_GATE.md  AGENT_WORKLOG.md  AGE_BANDS.md  ALPHABET_GAME_AUDIT_REMEDIATION_FINAL.md  ALPHABET_TRACING_INVESTIGATION.md  ANGEL_EVALUATION_HAND_TRACING_2026-02-02.md  APP_IMPROVEMENTS_CONSOLIDATED.md  ARCHITECTURE.md  ARCHITECTURE_DEPLOYMENT_SCALE.md  ARCHITECTURE_INTELLIGENT_ENGINE.md  AREAS_TO_EXPLORE.md  ASSET_INVENTORY.md  ASSET_MIGRATION_COMPLETE.md  ASSET_MIGRATION_IMPLEMENTATION_SUMMARY.md  ASSET_STRATEGY.md  AUDIT_BACKLOG.md  AUDIT_PERSONAS_GAMES_UX.md  AUDIT_PLAN_GAMES_UX.md  AUDIT_REVIEW_COMPLETE.md  AUDIT_REVIEW_SUMMARY.md  AVATAR_SYSTEM_COMPLETE.md  BACKEND_MISSING_FEATURES.md  BRAND_ARCHITECTURE_COMPLETE.md  BRAND_DECISION.md  BRAND_GUIDELINES_ANALYSIS.md  BRAND_KIT.md  BRAND_MESSAGING_STRATEGY.md  BRAND_NAMING_EXPLORATION.md  BRAND_VOICE_MASCOT_GUIDE.md  BULK_ASSET_MIGRATION_PLAN_27_GAMES.md  CAMERA_PRIVACY_CLARIFICATION.md  CC0_ASSET_SOURCES.md  CC0_GAME_ASSETS_RESOURCES.md  CHILD_PROFILE_CUSTOMIZATION_DESIGN.md  CHILD_PROFILE_CUSTOMIZATION_IMPLEMENTATION.md  (+267 more)
evaluations/: EMOJI_MATCH_ANALYSIS_README.md  angel-investor-evaluation.js  emoji_match_analysis.py  emoji_match_ux_qa_report.txt  run-angel-evaluation.sh
prompts/: 00-planning-web-version.md  01_initial_planning.md  README.md
scripts/: agent_gate.sh  analyze_video.py  audit_game_quality.js  audit_review.sh  backup-db.sh  batch_upgrade_games.js  check.sh  check_bundle_size.sh  check_hud_streaks.sh  check_loc_delta.py  check_no_external_network.sh  check_pr_size.sh  check_ui_design_tokens.sh  ci_db_migration_check.sh  convert_games_to_gamepage.py  db_migration_guard.sh  dev.sh  feature_regression_check.sh  fresh-audit.cjs  generate_tts_assets.ts  init-db.sh  setup.sh  (+16 more)
src/backend/: .env.example  .env.test  Dockerfile  alembic.ini  mark_verified.py  mypy.ini  pyproject.toml  start.py  user_query.py.legacy
src/backend/.agent/: AGENT_KICKOFF_PROMPT.txt  SESSION_CONTEXT.md  STEP1_ENV.sh
src/backend/alembic/: env.py
src/backend/alembic/versions/: 001_initial_migration.py  002_add_profile_photos.sql  002_rename_metadata_to_meta_data.py  003_add_audit_logs.py  004_add_user_email_verification_fields.py  005_add_games_table.py  006_add_game_completion_tracking.py  007_ensure_game_completion_tracking.py  008_add_subscription_tables.py  009_add_fk_indexes.py  2274d5839560_create_refresh_tokens_table.py  739ac7e9e4e3_change_age_from_int_to_float.py  add_progress_idempotency.py  d6c64c8f02e5_add_revoked_tokens_table.py  e1b4c3a9f7d2_harden_subscription_schema.py  f3c1a2b9d4e7_add_subscription_refresh_cycle_state.py
src/backend/app/: main.py
src/backend/app/api/: deps.py  permissions.py
src/backend/app/api/v1/: api.py
src/backend/app/api/v1/endpoints/: achievements.py  auth.py  data_export.py  games.py  issue_reports.py  profile_photos.py  progress.py  subscriptions.py  users.py
src/backend/app/core/: config.py  email.py  exceptions.py  health.py  logging_config.py  rate_limit.py  security.py  structured_logging.py  validation.py
src/backend/app/data/: games_data.py
src/backend/app/db/: base_class.py  session.py
src/backend/app/db/models/: __init__.py  achievement.py  audit_log.py  game.py  profile.py  progress.py  refresh_token.py  revoked_token.py  subscription.py  subscription_model.py  user.py
src/backend/app/middleware/: error_handler.py  security_headers.py
src/backend/app/schemas/: __init__.py  achievement.py  data_export.py  game.py  issue_report.py  profile.py  progress.py  subscription.py  subscription_schema.py  token.py  user.py  verification.py
src/backend/app/services/: __init__.py  account_lockout_service.py  achievement_service.py  audit_service.py  cache_service.py  data_export_service.py  dodo_payment_service.py  game_service.py  profile_service.py  progress_service.py  refresh_token_service.py  subscription_service.py  token_service.py  user_service.py
src/backend/docs/: API_AUDIT_PROMPT.md  API_AUDIT_REPORT.md
src/backend/scripts/: remove_background.py
src/backend/storage/issue_reports/a1e054a0-1b16-4957-97de-bb5e3cbaac3f/: 4f294532-a225-4f54-9b4f-2f7e4821fa45_20260225153222165643.webm
src/backend/tests/: conftest.py  test_achievement_service.py  test_auth.py  test_cache_service.py  test_config_import.py  test_data_export.py  test_deletion.py  test_dodo_payment.py  test_game_service.py  test_games.py  test_health.py  test_issue_reports.py  test_profile_photos.py  test_profiles.py  test_progress.py  test_progress_batch.py  test_progress_integration.py  test_progress_service.py  test_refresh_token_service.py  test_security.py  test_subscription_service.py  test_subscriptions.py  test_validation.py
(+1695 files in other folders)
